Add wipe/delete for flying vaults
